--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.active {
+  color: #FFF;
+  font-weight: bold;;
+  border-bottom: 2px solid transparent;
+  border-image: linear-gradient(0.2turn, rgba(0, 230, 227, .1), rgba(0, 230, 227, .5), rgba(0, 255, 104, .5), rgba(0, 255, 104, .1));
+  border-image-slice: 1;
+}
+
 .h-100 {
   height: 100%;
 }
