--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,30 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
+a {
+  text-decoration: none;
+}
+
 .active {
   color: #FFF;
   font-weight: bold;;
   border-bottom: 2px solid transparent;
   border-image: linear-gradient(0.2turn, rgba(0, 230, 227, .1), rgba(0, 230, 227, .5), rgba(0, 255, 104, .5), rgba(0, 255, 104, .1));
   border-image-slice: 1;
+}
+
+.txt-gradient {
+  background: linear-gradient(270deg, #00E6E3 2.73%, #00FF68 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.btn-gradient {
+  background-image: linear-gradient(270deg, #00E6E3 2.73%, #00FF68 100%);
+  border-radius: 30px !important;
+  color: #0E0E0E !important;
+  padding: 10px 24px !important;
 }
 
 .h-100 {
