--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ a {
 .hr-footer {
     border: 0;
     height: 1px;
-    background-image: -webkit-linear-gradient(left, rgba(35, 35, 35, .2),rgba(35, 35, 35, 1),rgba(35, 35, 35, .2));
+    background-image: linear-gradient(left, rgba(35, 35, 35, .2),rgba(35, 35, 35, 1),rgba(35, 35, 35, .2));
 }
 
 .active {
@@ -21,8 +21,8 @@ a {
 
 .txt-gradient {
   background: linear-gradient(270deg, #00E6E3 2.73%, #00FF68 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
     background-clip: text;
 }
 
@@ -52,4 +52,134 @@ a {
 .bg-gradient {
   background: linear-gradient(270deg, #00E6E3 2.73%, #00FF68 100%);
   padding: 10px;
+}
+
+/* Thans section */
+.container {
+  height: 300px;
+  position: relative;
+}
+
+.squares {
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  overflow: hidden;
+}
+
+.square {
+  animation: squares 9.5s linear infinite;
+  animation: squares 9.5s linear infinite;
+  align-self: flex-end;
+  width: 1em;
+  height: 1em;
+  transform: translateY(100%);
+  border: 1px solid rgba(0, 255, 104, .2);
+  border-radius: 5px;
+}
+
+.square:nth-child(2) {
+  height: 3em;
+  width: 3em;
+  animation-delay: 1s;
+  animation-delay: 1s;
+  animation-duration: 17s;
+  animation-duration: 17s;
+  filter: blur(5px);
+}
+
+.square:nth-child(3) {
+  height: 2em;
+  width: 1em;
+  animation-delay: 1.5s;
+  animation-delay: 1.5s;
+  animation-duration: 8s;
+  animation-duration: 8s;
+  filter: blur();
+}
+
+.square:nth-child(4) {
+  height: 1em;
+  width: 1.5em;
+  animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  filter: blur(3px);
+  animation-duration: 13s;
+  animation-duration: 13s;
+}
+
+.square:nth-child(5) {
+  height: 1.25em;
+  width: 2em;
+  animation-delay: 4s;
+  animation-delay: 4s;
+  filter: blur(2px);
+  animation-duration: 11s;
+  animation-duration: 11s;
+}
+
+.square:nth-child(6) {
+  height: 2.5em;
+  width: 2em;
+  animation-delay: 2s;
+  animation-delay: 2s;
+  filter: blur(1px);
+  animation-duration: 9s;
+  animation-duration: 9s;
+}
+
+.square:nth-child(7) {
+  height: 5em;
+  width: 2em;
+  filter: blur(2.5px);
+  animation-duration: 12s;
+  animation-duration: 12s;
+}
+
+.square:nth-child(8) {
+  height: 1em;
+  width: 3em;
+  animation-delay: 5s;
+  animation-delay: 5s;
+  filter: blur(6px);
+  animation-duration: 18s;
+  animation-duration: 18s;
+}
+
+.square:nth-child(9) {
+  height: 1.5em;
+  width: 2em;
+  filter: blur(0.5px);
+  animation-duration: 9s;
+  animation-duration: 9s;
+}
+
+.square:nth-child(9) {
+  height: 3em;
+  width: 2.4em;
+  animation-delay: 6s;
+  animation-delay: 6s;
+  filter: blur(0.5px);
+  animation-duration: 12s;
+  animation-duration: 12s;
+}
+
+@keyframes squares {
+  from {
+    transform: translateY(100%) rotate(-50deg);
+  }
+
+  to {
+    transform: translateY(calc(-100vh + -100%)) rotate(20deg);
+  }
+}
+
+@keyframes squares {
+  from {
+    transform: translateY(100%) rotate(-50deg);
+  }
+
+  to {
+    transform: translateY(calc(-100vh + -100%)) rotate(20deg);
+  }
 }
