--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,23 @@ a {
   padding: 10px;
 }
 
+/* PRODUCT ANIMATION */
+.product-img {
+  animation-name: bounce;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  position: relative;
+  bottom: 60px;
+  left: 20px;
+
+}
+
+@keyframes bounce {
+  50% {
+    transform: translateY(30px);
+  }
+}
+
 /* Thans section */
 .container {
   height: 300px;
